# student-admission-service

./: README.md  pyproject.toml
data/chroma/: chroma.sqlite3
data/policy/: policy_scholarship_and_program.txt
logs/: audit.jsonl
src/: config.py  main.py
src/core/: logger.py
src/processing/: ingest.py
src/rag/: chain.py  generator.py  prompts.py  retriever.py  vectorstore.py
src/routes/: chat.py  ingest.py
src/schemas/: query.py
src/test/asha_perera/: student1_cv_asha_perera.txt  student1_recommendation_asha_perera.txt  student1_transcript_asha_perera.txt
src/test/meera_iqbal/: student3_cv_meera_iqbal.txt  student3_recommendation_meera_iqbal.txt  student3_transcript_meera_iqbal.txt
src/test/nimal_silva/: student4_cv_nimal_silva.txt  student4_recommendation_nimal_silva.txt  student4_transcript_nimal_silva.txt
src/test/ravi_kumar/: student2_cv_ravi_kumar.txt  student2_recommendation_ravi_kumar.txt  student2_transcript_ravi_kumar.txt
src/test/sara_jayasinghe/: student5_cv_sara_jayasinghe.txt  student5_recommendation_sara_jayasinghe.txt  student5_transcript_sara_jayasinghe.txt
src/utils/: parser.py
